--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,9 @@
 			rel="icon"
 			type="image/svg+xml"
 			href="/vite.svg" />
+		<link
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+			rel="stylesheet" />
 		<script
 			src="https://accounts.google.com/gsi/client"
 			async></script>
