--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
 		<link
 			href="https://fonts.googleapis.com/icon?family=Material+Icons"
 			rel="stylesheet" />
+
 		<script
 			src="https://accounts.google.com/gsi/client"
 			async></script>
@@ -19,10 +20,11 @@
 	</head>
 	<body
 		class="h-screen w-svw"
-		style="background-color: black">
+		style="background-color: #0c0a09">
 		<div id="root"></div>
 		<script
 			type="module"
 			src="/src/index.js"></script>
+		<script src="https://p.trellocdn.com/embed.min.js"></script>
 	</body>
 </html>
