--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,7 +20,7 @@
 	</head>
 	<body
 		class="h-screen w-svw"
-		style="background-color: #0c0a09">
+		style="background-color: #000000">
 		<div id="root"></div>
 		<script
 			type="module"
